[package]
name = "poor_persistent_data_store"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
bytes = "0.5.5"
rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"
serde = { version = "^1.0.105", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4.8"

[dev-dependencies]
rs_ttb = { path = "../rs_test_tool_box" }
rusoto_credential = "0.44.0"
tokio = { version = "0.2.21", features = ["full"] }
pretty_env_logger = "0.4"
